# fusion

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  Cargo.toml  Coverage.html  FUSION_CLIENT_API_MAPPING.md  LICENSE  Makefile  PERFORMANCE_TESTING.md  PERFORMANCE_TESTING_OVERVIEW.md  PERFORMANCE_TESTING_QUICKSTART.md  README.md  fix_tox_env.py  makefile  mkdocs.yml  perf_test_config.toml  pyproject.toml  pyproject_docs_build.toml  run_perf_tests.sh  run_performance_tests.py  setup.cfg  sonar-project.properties  tatus  test.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  dev.yml  pr.yml  preview.yml  preview.yml.old_keep  release.yml  scan.yml  test_cross.yml
benches/: ex_bench.rs
docs/: api.md  attributes.md  contributing.md  datasets.md  download.md  fsync.md  fusion_filesystem.ipynb  get_started.ipynb  index.md  installation.md  metadata_creation.ipynb  products.md  quickstart.md  upload.md  usage.md  versions.json
docs/${{/: 404.html
docs/1.0.10/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.10/api/: index.html
docs/1.0.10/changelog/: index.html
docs/1.0.10/contributing/: index.html
docs/1.0.10/get_started/: index.html
docs/1.0.10/installation/: index.html
docs/1.0.10/search/: search_index.json
docs/1.0.10/usage/: index.html
docs/1.0.11/: 404.html  index.html  sitemap.xml
docs/1.0.11/api/: index.html
docs/1.0.11/changelog/: index.html
docs/1.0.12/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.13/: 404.html  index.html  sitemap.xml
docs/1.0.14/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.15/: 404.html  index.html  sitemap.xml
docs/1.0.16/: 404.html  index.html  sitemap.xml
docs/1.0.17/: 404.html  index.html  sitemap.xml
docs/1.0.18/: 404.html  index.html  sitemap.xml
docs/1.0.19/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.20/: 404.html  index.html  sitemap.xml
docs/1.0.21/: 404.html  index.html  sitemap.xml
docs/1.0.22/: 404.html  index.html  sitemap.xml
docs/1.0.23/: 404.html  index.html  sitemap.xml
docs/1.0.5/: sitemap.xml
docs/1.0.6/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.7/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.0.8/: 404.html  index.html  sitemap.xml
docs/1.0.9/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.1.0/: 404.html  index.html  sitemap.xml
docs/1.1.0-dev1/: 404.html  index.html  sitemap.xml
docs/1.1.0-dev3/: 404.html  index.html  sitemap.xml
docs/1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
docs/1.1.2/: 404.html  index.html  sitemap.xml
docs/1.1.3/: 404.html  index.html  sitemap.xml
docs/1.1.4/: 404.html  index.html  sitemap.xml
docs/1.2.0/: 404.html  index.html  sitemap.xml
docs/1.2.1/: 404.html  index.html  sitemap.xml
docs/1.2.2/: 404.html  index.html  sitemap.xml
docs/1.3.0/: 404.html  index.html  sitemap.xml
docs/1.3.1/: 404.html  index.html  sitemap.xml
docs/1.3.2/: 404.html  index.html  sitemap.xml
docs/1.3.3/: 404.html  index.html  sitemap.xml
docs/1.3.4/: 404.html  index.html  sitemap.xml
docs/1.4.0/: 404.html  index.html  sitemap.xml
docs/1.4.1/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.0/: 404.html  index.html  sitemap.xml
docs/2.0.1/: 404.html  index.html  sitemap.xml
docs/2.0.10/: 404.html  index.html  sitemap.xml
docs/2.0.11/: 404.html  index.html  sitemap.xml
docs/2.0.12/: 404.html  index.html  sitemap.xml
docs/2.0.13/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.14/: 404.html  index.html  sitemap.xml
docs/2.0.15/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.16/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.17/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.2/: 404.html  index.html  sitemap.xml
docs/2.0.3/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.4/: 404.html  index.html  sitemap.xml
docs/2.0.5/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.6/: 404.html  index.html  objects.inv  sitemap.xml
docs/2.0.7/: 404.html  index.html  sitemap.xml
docs/2.0.8/: 404.html  index.html  sitemap.xml
docs/2.0.9/: 404.html  index.html  objects.inv  sitemap.xml
docs/3.0.0/: 404.html  index.html  objects.inv  sitemap.xml
docs/3.0.1/: 404.html  index.html  sitemap.xml
docs/3.0.2/: 404.html  index.html  sitemap.xml
docs/4.0.0/: 404.html  index.html  sitemap.xml
docs/4.0.1/: 404.html  index.html  sitemap.xml
docs/4.0.2/: 404.html  index.html  objects.inv  sitemap.xml
docs/4.0.3/: 404.html  index.html  sitemap.xml
docs/latest/: 404.html  index.html
docs/site/: index.html
docs/}}/: 404.html
fusion/: __init__.py  __main__.py  authentication.py  exceptions.py  fs_sync.py  fusion  fusion.py  fusion_filesystem.py  types.py  utils.py  versions.json
fusion/1.0.5/: 404.html  index.html
py_integ/: __init__.py  conftest.py  pytest.ini  test_integ.py
py_src/fusion/: __init__.py  _fusion.py  _fusion.pyi  application_types.py  attributes.py  authentication.py  credentials.py  data_dependency.py  dataflow.py  dataset.py  embeddings.py  embeddings_utils.py  exceptions.py  fs_sync.py  fusion.py  fusion_filesystem.py  fusion_types.py  pagination_utils.py  product.py  reading.py  report.py  report_attributes.py  test.py  units.py  utils.py
py_tests/: __init__.py  bench_expr.py  bench_rep_gen.py  bench_template.html  conftest.py  test_attributes.py  test_authentication.py  test_bench.py  test_bench_expr.py  test_cli_and_shims.py  test_credentials.py  test_data_dependency.py  test_dataflow.py  test_dataset.py  test_embeddings.py  test_embeddings_utils.py  test_exceptions.py  test_filesystem.py  test_fsync.py  test_fusion.py  test_fusion_helpers.py  test_fusion_types.py  test_performance.py  test_product.py  test_report.py  test_report_attributes.py  test_units.py  test_utils.py
python/fusion/: __init__.py  authentication.py  fs_sync.py  fusion_filesystem.py  utils.py
runnable/: run.py
src/: auth.rs  experiments.rs  lib.rs  utils.rs
tests/: conftest.py  test_fusion.py
(+512 files in other folders)
