[package]
name = "pyfusion"
version = "1.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fusion"

# rlib is needed to be able to separate tests into tests/
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.21.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
bincode = "1.3.3"


[package.metadata.cargo-llvm-cov]
# Ignore directories and files that are not part of the Rust source code
ignore-filename-regex = "(.cargo|py_integ|py_src|py_tests|dist|docs|downloads|runnable|site|target|\\.git|\\.github)/"
ignore-glob = ["py_integ/*", "py_src/*", "py_tests/*", "dist/*", "docs/*", "downloads/*", "runnable/*", "site/*", "target/*"]

[dev-dependencies]
tempdir = "0.3.7"