[package]
name = "pyfusion"
version = "2.0.14"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fusion"
# rlib is needed to be able to separate tests into tests/
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.22.4"}
pyo3-log = { version = "0.11.0" }
log = { version = "~0.4.4", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
bincode = "1.3.3"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "full"] }
url = { version = "2.5", features = [] }
json = { version = "0.12" }
jsonwebtoken = {version = "9.3.0"}
state = { version = "0.6"}


# Set ceiling on Windows crates due to auth issue on some Windows environments
[target.'cfg(target_arch = "windows")'.dependencies]
windows-targets = { version = "<=0.48.5" }
windows-registry = { version = "<=0.2.0" }
windows-strings = { version = "<=0.1.0" }
windows-link = { version = "<=0.1.0" }
# wasi = { version = "<= 0.13.3+wasi-0.2.2" }
# tokio-util = { version = "<= 0.7.13" }
# End of WINDOWS limit


# Struggling to get OPEN_SSL env vars to point to the installed libs on these archs
# Remove these once we figure out the magic
[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
[target.'cfg(target_arch = "powerpc64")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
[package.metadata.cargo-llvm-cov]
# End OPEN_SSL 


# Ignore directories and files that are not part of the Rust source code
ignore-filename-regex = "(.cargo|py_integ|py_src|py_tests|dist|docs|downloads|runnable|site|target|\\.git|\\.github)/"
ignore-glob = ["py_integ/*", "py_src/*", "py_tests/*", "dist/*", "docs/*", "downloads/*", "runnable/*", "site/*", "target/*"]

[dev-dependencies]
tempdir = "0.3.7"
criterion = { version = "0.5.1", features = ["html_reports"] }
mockito = "1.4"
reqwest_mock = "0.7"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[[bench]]
name = "ex_bench"
harness = false

[features]
default = []
experiments = []
