[project]
name = "PyFusion"
version = "1.0.21"

homepage = "https://github.com/jpmorganchase/fusion"
description = "JPMC Fusion Developer Tools"
authors = [
    { name = "FusionDevs", email = "fusion_developers@jpmorgan.com" }
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">= 3.9"

dependencies = [
    "requests >= 2.27.0",
    "pandas >= 1.1.1",
    "joblib >= 1.1.0",
    "tabulate >= 0.8.10",
    "tqdm >= 4.64.0",
    "pyarrow >= 11.0",
    "fsspec >= 2021.6.1",
    "aiohttp >= 3.7.1",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "fusion"
module-name = "fusion._fusion"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter",
#    "jupyter_contrib_nbextensions",
    "mike"
]

aws = [
    "s3fs"
]

gcs = [
    "gcsfs"
]

azr = [
    "adlfs"
]

polars = [
    "polars"
]

events = [
    "sseclient",
    "aiohttp-sse-client"
]


[tool.rye]
managed = true
dev-dependencies = [
    "bump2version",
    "maturin>=1.2,<2.0",
    "mypy",
    "pip",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "toml",
    "tox",
    "tox-gh-actions",
    "twine",
    "types-requests >=2.27.0",
    "types-tabulate >= 0.8.8",
    "virtualenv",
    "pytest-random-order>=1.1.1",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "fusion"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    'Q',
    'B',
    'UP',
    'I',
    'F',
    'PTH',
    'PIE',
    'TID',
    'ERA',
    'ARG',
    'PL',
    #'ANN',
    'SIM',
    'PERF',
    'T20',
]
extend-ignore = ["S101", "FA100", "F541"]

[tool.ruff.lint.isort]
known-first-party = ["fusion"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.pytest.ini_options]
addopts = "--cov fusion --cov-report html:.reports/html --cov-report term --random-order -p no:warnings -v"
minversion = "8.0"
testpaths = "tests"
pythonfiles = "test_*.py"


