[project]
name = "PyFusion"
version = "1.0.23"

homepage = "https://github.com/jpmorganchase/fusion"
description = "JPMC Fusion Developer Tools"
authors = [
    { name = "FusionDevs", email = "fusion_developers@jpmorgan.com" }
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Rust',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Typing :: Typed',
]

requires-python = ">= 3.9"

dependencies = [
    "requests >= 2",
    "pandas >= 1.1",
    "joblib >= 1.1",
    "tabulate >= 0.8",
    "tqdm >= 4",
    "pyarrow >= 11",
    "fsspec >= 2021",
    "aiohttp >= 3.7.1",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "fusion"
module-name = "fusion._fusion"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
doc = [
    "mkdocs",
    "docutils",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    #"mkdocs-material-extension",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter",
    "jupyter_contrib_nbextensions",
    "mike",
    "notebook >=6.0,<7.0"
]

aws = [
    "s3fs"
]

gcs = [
    "gcsfs"
]

azr = [
    "adlfs"
]

polars = [
    "polars"
]

events = [
    "sseclient",
    "aiohttp-sse-client"
]


[tool.rye]
managed = true
dev-dependencies = [
    "auditwheel>=6.0.0; sys_platform=='linux'",
    "bump2version",
    "cffi>=1.16.0; sys_platform=='darwin'",
    "ipython",
    "maturin>=1.2,<2.0",
    "mypy",
    "patchelf>=0.17.2.1; sys_platform=='linux'",
    "pandas-stubs>1.1",
    "pip",
    "pre-commit",
    "pytest",
    "pytest-random-order>=1.1.1",
    "pytest-cov",
    "requests-mock>=1.12.1",
    "ruff",
    "toml",
    "tox",
    "tox-gh-actions",
    "twine",
    "types-requests >=2",
    "types-tabulate >= 0.8.8",
    "virtualenv",
    "ziglang>=0.11.0; sys_platform=='linux'",
    "types-tqdm>=4",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "fusion"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    'Q',
    'B',
    'UP',
    'I',
    'F',
    'PTH',
    'PIE',
    'TID',
    'ERA',
    'ARG',
    'PL',
    #'ANN',
    'SIM',
    'PERF',
    'T20',
]
extend-ignore = ["S101", "FA100", "F541"]

[tool.ruff.lint.isort]
known-first-party = ["fusion"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.pytest.ini_options]
addopts = "--cov fusion --cov-report html:.reports/html --cov-report term --random-order -p no:warnings -v"
minversion = "8.0"
pythonpath = ["src", "py_tests"]
testpaths = "py_tests"
pythonfiles = "test_*.py"

[tool.mypy]
ignore_missing_imports = true


